# img2art-search

./: .gitattributes  .gitignore  MIT-LICENSE.txt  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
img2art_search/: constants.py  utils.py
img2art_search/data/: data.py  dataset.py
img2art_search/models/: compute_embeddings.py  model.py  predict.py  train.py
makeitsports_bot/: constants.py  utils.py
makeitsports_bot/data/: data.py  transforms.py
makeitsports_bot/losses/: contrastiveloss.py
makeitsports_bot/models/: compute_embeddings.py  model.py  predict.py  train.py
notebooks/: 0-0-brsc-create-dataset.ipynb  0-1-brsc-poc-fine-tune.ipynb  0-2-brsc-create-wikiart-dataset.ipynb  0-3-brsc-create-wikiart-gallery.ipynb
