[tool.poetry]
name = "makeitsports-bot"
version = "0.1.0"
description = ""
authors = ["brunorosilva <b.rosilva1@gmail.com>"]
readme = "README.md"
packages = [{include = "makeitsports_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
pandas = "^2.2.2"
scipy = "^1.14.0"
numpy = "^2.0.0"
transformers = "^4.41.2"
tensorboard = "^2.17.0"
scikit-learn = ">=0.0.0"
matplotlib = "^3.9.0"
gradio = ">=0.0.0"


[tool.poetry.dev-dependencies]
black = "^24.4.2"
vulture = "^2.11"
mypy = "^1.10.1"
flake8 = "^7.1.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
